# hydrotopia

./: .clang-format  .gitignore  CMakeLists.txt
controller/: CMakeLists.txt
controller/arduino_controller/: README.md  chassi_microcontroller.ino
controller/controller/: CMakeLists.txt  hydroctrl
controller/controller/common/: channel_collection.hpp  channel_index.hpp  channel_type.cpp  channel_type.hpp  controller_ctx.hpp  error_code.hpp  event.hpp  io_monitor.cpp  power_consumption.cpp  power_consumption.hpp  subsystem.hpp
controller/controller/common/channel/: channel.cpp  channel.hpp
controller/controller/common/channel/subsystem/main/: drip_irrigation_channel.cpp  drip_irrigation_channel.hpp  full_spectrum_light_channel.cpp  full_spectrum_light_channel.hpp  ventilation_fan_channel.cpp  ventilation_fan_channel.hpp  wind_simulation_fan_channel.cpp  wind_simulation_fan_channel.hpp
controller/controller/common/network/: socket.hpp
controller/controller/common/relay_module/: relay_module.cpp  relay_module.hpp
controller/controller/common/task_scheduler/: data_types.hpp  task_scheduler.cpp  task_scheduler_interface.hpp
controller/controller/controller/: controller.cpp
controller/controller/user_interface/console_user_interface/: cli.hpp
controller/controller/user_interface/socket_user_interface/: request_handler.cpp  request_handler.hpp
controller/full_spectrum_led_service/: CMakeLists.txt  full_spectrum_led_service  main.cpp
controller/localhost_event/: CMakeLists.txt  main.cpp
controller/relay/: CMakeLists.txt  service.c
controller/relay/16_channels/lib/: CMakeLists.txt
controller/relay/16_channels/lib/include/rc/: relay_16.h
controller/relay/16_channels/lib/src/: relay.c
controller/relay/16_channels/tool/: CMakeLists.txt  rc_ctrl  rc_ctrl_16
controller/relay/16_channels/tool/src/: main.c
controller/relay/32_channels/lib/include/rc/: relay_32.h
controller/relay/32_channels/lib/src/: relay.c
controller/relay/32_channels/tool/: rc_ctrl  rc_ctrl_32
controller/relay/32_channels/tool/src/: main.c
controller/relay/lib/src/: relay.c
controller/relay/tool/: CMakeLists.txt
controller/relay_controller/lib/include/rc/: relay.h
controller/relay_controller/lib/src/: relay.c
controller/relay_controller/tool/src/: main.c
controller/rpi_controller/: CMakeLists.txt  main.cpp
controller/rpi_controller/common/: channel_collection.hpp  channel_index.hpp  channel_type.cpp  channel_type.hpp  configuration.hpp  controller_ctx.hpp  electrical_system.hpp  error_code.cpp  event.cpp  io_monitor.hpp  log.cpp  log.hpp  power_consumption.cpp  power_consumption.hpp  subsystem.cpp  system_clock.cpp  system_clock.hpp  ventilation_fan.cpp  ventilation_fan.hpp
controller/rpi_controller/common/channel/: channel.cpp  channel.hpp
controller/rpi_controller/common/channel/subsystem/core/: rotary_alarm_light_channel.cpp  rotary_alarm_light_channel.hpp
controller/rpi_controller/common/channel/subsystem/main/: full_spectrum_light_channel.cpp  step_down_voltage_transformer_channel.cpp  step_down_voltage_transformer_channel.hpp  ventilation_fan_channel.cpp  ventilation_fan_channel.hpp  water_pump_channel.cpp  water_pump_channel.hpp  wind_simulation_fan_channel.cpp  wind_simulation_fan_channel.hpp
controller/rpi_controller/common/network/: socket.cpp
controller/rpi_controller/common/relay_module/: relay_module.cpp  relay_module.hpp
controller/rpi_controller/common/string_processing/: regex.cpp  regex.hpp
controller/rpi_controller/common/system/: system.hpp
controller/rpi_controller/common/task_scheduler/: task.hpp  task_scheduler.cpp  task_scheduler.hpp  task_scheduler_interface.hpp
controller/rpi_controller/common/unit/: temperature.cpp  temperature.hpp
controller/rpi_controller/controller/: controller.cpp  controller.hpp
controller/rpi_controller/user_interface/console_user_interface/: cli.cpp
controller/rpi_controller/user_interface/socket_user_interface/: request_handler.cpp  request_handler.hpp
controller/sensor_service/: CMakeLists.txt  data_processor.cpp  data_processor.hpp  gnuplot.cpp  gnuplot.hpp  main.cpp  measurement.hpp
controller/user_interface/: .gitignore  CMakeLists.txt  README.md
controller/user_interface/include/: common.hpp  hydrotopia_ui.hpp  timer.hpp
controller/user_interface/include/graphics_context/: rendering_context.hpp  surface.hpp  surface_cache.hpp
controller/user_interface/include/object/: background_object.hpp  dashed_line_object.hpp  image_object.hpp  navigate_object.hpp  object.hpp  splash_screen_object.hpp  text_object.hpp
controller/user_interface/include/scene/: scene.hpp
controller/user_interface/include/scene/00_cache_generation_scene/: cache_generation_scene.hpp
controller/user_interface/include/scene/01_idle_screen/: idle_scene.hpp
controller/user_interface/include/scene/02_security/: keypad_scene.hpp
controller/user_interface/include/scene/03_settings/: control_channel.hpp  settings_scene.hpp
controller/user_interface/include/user_interface/: button.hpp  screen.hpp  sdl_screen.hpp  ui_event.hpp  xlib_screen.hpp
controller/user_interface/src/: common.cpp  hydrotopia_ui.cpp  main.cpp  timer.cpp
controller/user_interface/src/graphics_context/: rendering_context.cpp  surface.cpp  surface_cache.cpp
controller/user_interface/src/object/: background_object.cpp  dashed_line_object.cpp  image_object.cpp  navigate_object.cpp  object.cpp  splash_screen_object.cpp  text_object.cpp
controller/user_interface/src/scene/: scene.cpp
controller/user_interface/src/scene/00_cache_generation_scene/: cache_generation_scene.cpp
controller/user_interface/src/scene/01_idle_screen/: idle_scene.cpp
controller/user_interface/src/scene/02_security/: keypad_scene.cpp
controller/user_interface/src/scene/03_settings/: control_channel.cpp  settings_scene.cpp
controller/user_interface/src/user_interface/: button.cpp  screen.cpp  xlib_screen.cpp
sensors/air/: air_sensors_arduino
sensors/water/: water_sensors_arduino
